[package]
name = "moonbeam-rpc-debug"
authors = [ "PureStake" ]
edition = "2018"
homepage = "https://moonbeam.network"
license = "GPL-3.0-only"
repository = "https://github.com/PureStake/moonbeam/"
version = "0.1.0"

[dependencies]
futures      = { version = "0.3", features = [ "compat" ] }
hex-literal  = "0.3.4"
jsonrpc-core = "18.0.0"
tokio        = { version = "1.10", features = [ "sync", "time" ] }

# Moonbeam
moonbeam-client-evm-tracing   = { path = "../../evm-tracing" }
moonbeam-rpc-core-debug       = { path = "../../rpc-core/debug" }
moonbeam-rpc-core-types       = { path = "../../rpc-core/types" }
moonbeam-rpc-primitives-debug = { path = "../../../primitives/rpc/debug" }

# Substrate
sc-client-api    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sc-utils         = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sp-api           = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sp-block-builder = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sp-blockchain    = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sp-core          = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sp-io            = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }
sp-runtime       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.13.0" }

# Frontier
ethereum       = { version = "0.11.1", default-features = false, features = [ "with-codec" ] }
ethereum-types = "0.12.1"
fc-consensus   = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.13.0" }
fc-db          = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.13.0" }
fc-rpc         = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.13.0", features = [ "rpc_binary_search_estimate" ] }
fp-rpc         = { git = "https://github.com/darwinia-network/frontier", branch = "darwinia-v0.13.0" }
